--- a/.env.example
+++ b/.env.example
@@ -1,51 +1,32 @@
 # App's running environment
-NODE_ENV="production"
+NODE_ENV="development"
 
 # App's running port
-PORT="4040"
+PORT="9000"
 
-# Keep logs (in days)
-# default: 10
-# Note: Keeps log-files of no. of days defined
-LOG_DAYS=10
-
-# Max request body size
-APP_MAX_UPLOAD_LIMIT="50mb"
-
-# Max Parameter Limit that are allowed in 
-# URL-encoded data
-APP_MAX_PARAMETER_LIMIT="5000"
-
-# Is CORS Enabled
-# default: true (Accepts only boolean)
 CORS_ENABLED=true
 
 # JSON Web Tokem Expiry time
-# Note: In minutes-'3m'  (days now)
+# Note: In minutes
 JWT_EXPIRES_IN='300d'
 
 # App's global details
-APP_NAME="Payment Gateway"
-APP_DESCRIPTION="Payment Gateway"
-APP_URL="http://localhost:4040"
-APP_KEYWORDS="web-server, typescript-express, typescript, express"
-COMPANY_NAME="CLL"
+APP_NAME="RBAC Authentication"
+APP_DESCRIPTION="RBAC Authentication"
+APP_URL="http://localhost:9000"
 
 # App's secret key
 # Note: This value will be used in CSRF Token 
 # as well as in JSON Web Token (ie. JWT)
 APP_SECRET="arandomandverylongstringthatnobodycanguess"
 
-POSTGRESQL_DATABASE_URL="postgres://postgres:postgres@localhost:5432/payment_gateway"
-PRE_DATABASE_URL='mysql://MernAdmin:developer@localhost:3306/payment_gateway'
-DATABASE_URL='mysql://root:DevelopeR@132@localhost:8080/payment_gateway'
+# For local;
+DATABASE_URL='db_type://user:password@localhost:PORT/db_name'
 
 JWT_SECRET="arandomandverylongstringthatnobodycanguess"
 
 
-
-
 #EMAIL CREDENTIALS
-EMAIL_SERVICE='hotmail'
-AUTH_EMAIL='example@provider.com'
+EMAIL_SERVICE='service'
+AUTH_EMAIL='email'
 AUTH_EMAIL_PASS='password'
